--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MarvelApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="toolbarStyle">@style/MarvelToolbar</item>
+    </style>
+
+    <!-- Global toolbar style -->
+    <style name="MarvelToolbar" parent="@style/Widget.Material3.Toolbar">
+        <item name="android:elevation">4dp</item>
     </style>
 
     <style name="Theme.MarvelApp" parent="Base.Theme.MarvelApp" />
